Add blog preview widgets

--- a/botanic-gardens-app/src/app/components/Banner/Banner.module.css
+++ b/botanic-gardens-app/src/app/components/Banner/Banner.module.css
@@ -3,10 +3,9 @@
 .bannerContainer {
     position: relative;
     width: 100%;
-    max-width: 1600px;
     max-height: 1000px;
     margin: 40px auto;
-    border: 4px solid;
+    border: 2px solid;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
@@ -22,15 +21,15 @@
     object-position: center;
   }
   
-  .textOverlay {
+  .textOverlay { 
     position: absolute;
     top: 50%;
-    left: 25%;
-    transform: translate(-50%, -50%);
+    left: 5%;
+    transform: translateY(-50%);
     color: white;
     font-size: 3rem;
     text-align: left;
-  }
+}
   
   .title {
     margin-bottom: 20px;
@@ -43,7 +42,7 @@
     color: white;
     padding: 10px 20px;
     font-size: 1rem;
-    border: none;
+    border: 2px bold;
     border-radius: 2px;
     cursor: pointer;
     text-decoration: none;
